--- a/frontend/src/pages/WelcomeForm.css
+++ b/frontend/src/pages/WelcomeForm.css
@@ -17,7 +17,7 @@
   border-radius: 10px;
   padding: 20px;
   font-size: 2rem;
-  font-family: "Indie Flower", cursive;
+  font-family: "Indie Flower", "Shantell Sans", cursive;
   height: fit-content;
   max-width: 80%;
   margin-top: 15%;
